...
                      var result = await widget.httpClient!.post(
                          Uri.parse('https://example.com/signin'),
                          body: json.encode(formData.toJson()),
                          headers: {'content-type': 'application/json'});

                      _showDialog(switch (result.statusCode) {
                        200 => 'Successfully signed in.',
                        401 => 'Unable to sign in.',
                        _ => 'Something went wrong. Please try again.'
                      });
                    },
                  ),
                ].expand(
...
